--- a/src/views/TimeView.fxml
+++ b/src/views/TimeView.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -254,6 +258,32 @@
                   <Image url="@../images/next_element_right.png" />
                </image>
             </ImageView>
+            <Label layoutX="78.0" layoutY="450.0" prefHeight="42.0" prefWidth="518.0" style="-fx-wrap-text: true;" text="Weekly Average of All Periods:" textFill="#e6bb9a">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="25.0" />
+               </font>
+            </Label>
+            <BarChart fx:id="barChart" layoutX="25.0" layoutY="495.0" prefHeight="391.0" prefWidth="571.0" stylesheets="@../stylesheets/chartStyling.css">
+              <xAxis>
+                <CategoryAxis side="BOTTOM" />
+              </xAxis>
+              <yAxis>
+                <NumberAxis side="LEFT" />
+              </yAxis>
+            </BarChart>
+            <LineChart fx:id="lineChart" layoutX="599.0" layoutY="495.0" prefHeight="391.0" prefWidth="571.0" stylesheets="@../stylesheets/chartStyling.css">
+              <xAxis>
+                <CategoryAxis side="BOTTOM" />
+              </xAxis>
+              <yAxis>
+                <NumberAxis side="LEFT" />
+              </yAxis>
+            </LineChart>
+            <Label layoutX="652.0" layoutY="450.0" prefHeight="42.0" prefWidth="518.0" style="-fx-wrap-text: true;" text="Daily Average of All Periods:" textFill="#e6bb9a">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="25.0" />
+               </font>
+            </Label>
          </children></Pane>
    </children>
 </AnchorPane>
